# everscale-client-scala

./: .gitignore  .gitmodules  .sbtopts  .scalafmt.conf  README.md  build.sbt
.github/workflows/: scala.yml
everscale-client-scala/src/main/scala/com/radiance/jvm/: Context.scala  DiscriminatorConfig.scala  OperationCode.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/abi/: AbiModule.scala  Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/app/: AppCryptoBox.scala  AppDebotBrowser.scala  AppObject.scala  AppSigningBox.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/boc/: BocModule.scala  Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/client/: Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/crypto/: CryptoModule.scala  Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/debot/: DebotModule.scala  Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/net/: NetModule.scala  Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/processing/: ProcessingModule.scala  Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/proofs/: ProofsModule.scala  Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/tvm/: TvmModule.scala  Types.scala
everscale-client-scala/src/main/scala/com/radiance/jvm/utils/: Types.scala
everscale-client-scala/src/main/scala/com/radiance/samples/: Configuration.scala  ContractDeploy.scala  Modules.scala
everscale-client-scala/src/test/scala/com/radiance/: TestUtils.scala
everscale-client-scala/src/test/scala/com/radiance/jvm/: AbiModuleTest.scala  CryptoModuleTest.scala  DebotModuleTest.scala  NetModuleTest.scala  ProcessingModuleTest.scala  TestBase.scala  TvmModuleTest.scala
everscale-client-scala/src/test/scala/com/radiance/jvm/temp/: Mod.scala
everscale-codegen/src/main/resources/: prototypes.txt
everscale-codegen/src/main/scala/com/radiance/generator/: CodeGenerator.scala
everscale-codegen/src/main/scala/com/radiance/generator/types/: ApiDescription.scala
native/: CMakeLists.txt
native/src/: Context.h  TonContextScala.h  bridge.cpp
project/: OperationSystem.scala  plugins.sbt
src/cpp/: TONContext.h
src/main/java/com/radiance/tonclient/: TONContext.java
src/main/scala/com/radiance/scala/tonclient/: Abi.scala  Args.scala  Boc.scala  Client.scala  Crypto.scala  Net.scala  Processing.scala  TONContext.scala  TonContext.scala  Tvm.scala  Utils.scala
src/main/scala/com/radiance/scala/tonclient/abi/: Abi.scala
src/main/scala/com/radiance/scala/tonclient/boc/: Boc.scala
src/main/scala/com/radiance/scala/tonclient/client/: Client.scala
src/main/scala/com/radiance/scala/tonclient/crypto/: Crypto.scala
src/main/scala/com/radiance/scala/tonclient/net/: Net.scala
src/main/scala/com/radiance/scala/tonclient/processing/: Processing.scala
src/main/scala/com/radiance/scala/tonclient/tvm/: Tvm.scala
src/main/scala/com/radiance/scala/tonclient/types/: AbiConfig.scala  AbiHandle.scala  CallSet.scala  ClientConfig.scala  ClientError.scala  CryptoConfig.scala  DecodedMessageBody.scala  DecodedOutput.scala  DeploySet.scala  ExecutionOptions.scala  FunctionHeader.scala  KeyPair.scala  MessageBodyType.scala  NetworkConfig.scala  OrderBy.scala  ResultOfAttachSignature.scala  ResultOfEncodeAccount.scala  ResultOfEncodeMessage.scala  ResultOfEncodeMessageBody.scala  ResultOfProcessMessage.scala  ResultOfRunExecutor.scala  ResultOfRunTvm.scala  ResultOfSign.scala  SigningBoxHandle.scala  SortDirection.scala  StateInitParams.scala
src/main/scala/com/radiance/scala/tonclient/utils/: Utils.scala
ton_client/src/main/scala/context/: TonContextScala.scala
ton_client/src/main/scala/methods/: AbiModule.scala  BocModule.scala  ClientModule.scala  CryptoModule.scala  NetModule.scala  ProcessingModule.scala  TvmModule.scala  UtilsModule.scala
ton_client/src/main/scala/types/: AbiTypes.scala  ApiNew.scala  BocTypes.scala  ClientTypes.scala  CryptoTypes.scala  NetTypes.scala  ProcessingTypes.scala  TvmTypes.scala  UtilsTypes.scala
ton_client_scala/src/main/scala/com/radiance/jvm/: Bind.scala  Context.scala  CreateContextResponse.scala  OperationCode.scala  OperationResponse.scala  Utils.scala  package.scala
ton_client_scala/src/main/scala/com/radiance/jvm/abi/: AbiModule.scala  Types.scala
ton_client_scala/src/main/scala/com/radiance/jvm/app/: AppEncryptionBox.scala  AppObject.scala  AppRequestResult.scala  AppRequestResultADT.scala  ParamsOfAppRequest.scala  ParamsOfResolveAppRequest.scala
ton_client_scala/src/main/scala/com/radiance/jvm/boc/: BocModule.scala  Types.scala
ton_client_scala/src/main/scala/com/radiance/jvm/client/: ClientModule.scala  Types.scala
ton_client_scala/src/main/scala/com/radiance/jvm/crypto/: CryptoModule.scala  Types.scala
ton_client_scala/src/main/scala/com/radiance/jvm/debot/: DebotModule.scala  Types.scala
ton_client_scala/src/main/scala/com/radiance/jvm/net/: NetModule.scala  Types.scala
ton_client_scala/src/main/scala/com/radiance/samples/: Configuration.scala  ContractDeploy.scala  Modules.scala
ton_client_scala/src/test/scala/com/radiance/jvm/: AbiModuleTest.scala  BocModuleTest.scala  ClientModuleTest.scala  ConfigTest.scala  CryptoModuleTest.scala  DebotModuleTest.scala  NetModuleTest.scala  ProcessingModuleTest.scala  TestBase.scala  TestDecoders.scala  TestUtils.scala  TvmModuleTest.scala  UtilsModuleTest.scala  Version.scala
ton_client_scala/src/test/scala/com/radiance/serde/: SerdeTest.scala
ton_generator/src/main/resources/: prototypes-1.1.0.txt  prototypes-1.3.0.txt  prototypes-1.4.0-rc.txt  prototypes-1.5.0.txt  prototypes-1.6.0.txt  prototypes-1.6.3.txt  prototypes-1.8.0.txt  prototypes.txt
ton_generator/src/main/scala/: Test.scala
ton_generator/src/main/scala/com/radiance/: Value.scala
ton_generator/src/main/scala/com/radiance/generator/: CodeGenerator.scala
(+191 files in other folders)
